# psephos

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py  test-requirements-latest.txt  test-requirements.txt  tox.ini
.github/: labeler.yml
.github/workflows/: docker.yaml  docs.yaml  labeler.yaml  postman.yaml  pypi.yaml  release.yaml  tests.yaml  update_changelog.yaml
.postman/: api
BootstraapStudio/: PollingApp.bsdesign
app/: account_manager.py  app.py  config.py  dependencies.py  main.py  mongo_db.py
app/Exceptions/: group.py
app/actions/: account.py  authentication.py  group.py  superuser.py  workspace.py
app/exceptions/: __init__.py  account.py  authentication.py  group.py  policy.py  resource.py  user.py  workspace.py
app/models/: documents.py  group.py  policy.py  student.py  user.py  user_manager.py  workspace.py
app/routes/: __init__.py  account.py  authentication.py  group.py  user.py  websocket.py  workspace.py
app/schemas/: account.py  group.py  member.py  policy.py  user.py  workspace.py
app/tests/: conftest.py  test_1_users.py  test_2_groups.py  test_groups.py  test_users.py
app/utils/: auth_strategy.py  auth_transport.py  colored_dbg.py  path_operations.py  permissions.py  token_db.py  user.py
postman/collections/: Polling App | 0.0.4 | Documentation.json  Polling App | 0.0.4 | Mock Driver.json  Polling App | 0.0.5 | Documentation.json  Polling App | 0.0.5 | Mock Driver.json
postman/schemas/: index Copy.json  index.json
src/: account_manager.py  app.py  config.py  dependencies.py  documents.py  mongo_db.py
src/actions/: account.py  authentication.py  group.py  poll.py  superuser.py  workspace.py
src/exceptions/: account.py  authentication.py  group.py  policy.py  poll.py  resource.py  workspace.py
src/models/: documents.py
src/routes/: account.py  authentication.py  group.py  poll.py  websocket.py  workspace.py
src/schemas/: account.py  authentication.py  group.py  member.py  policy.py  poll.py  polls.py  question.py  workspace.py
src/unipoll_api/: __init__.py  account_manager.py  app.py  config.py  dependencies.py  documents.py  entry_points.py  mongo_db.py  plugin_manager.py  plugins.py  redis.py  websocket_manager.py
src/unipoll_api/actions/: __init__.py  __interface__.py  authentication.py  group.py  members.py  policy.py  poll.py  websocket.py  workspace.py
src/unipoll_api/exceptions/: __init__.py  group.py  poll.py  resource.py  websocket.py  workspace.py
src/unipoll_api/routes/: __init__.py  account.py  authentication.py  group.py  permissions.py  poll.py  streams.py  swagger_docs.py  websocket.py  workspace.py
src/unipoll_api/routes/v1/: __init__.py  account.py  authentication.py  group.py  poll.py  workspace.py
src/unipoll_api/routes/v2/: __init__.py  account.py  accounts.py  authentication.py  authentications.py  group.py  groups.py  members.py  permissions.py  policies.py  poll.py  polls.py  workspace.py  workspaces.py
src/unipoll_api/schemas/: account.py  group.py  member.py  policy.py  poll.py  question.py  websocket.py  workspace.py
src/unipoll_api/timer_plugin/: __init__.py  plugin.py
src/unipoll_api/utils/: api_versioning.py  cli_args.py  events.py  permissions.py  streams.py
src/utils/: auth_transport.py  path_operations.py  permissions.py  token_db.py
tests/: conftest.py  test_1_accounts.py  test_1_database.py  test_1_users.py  test_2_groups.py  test_2_workspaces.py  test_3_groups.py
tests/test_v1/: test_1_accounts.py  test_2_workspaces.py  test_3_groups.py
