[build-system]
requires = ["setuptools", "setuptools-scm[toml]>=7.1", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "unipoll-api"
dynamic= ["version"]
description = "Unipoll API"
authors = [{email = "mpisman@unipol.cc"}, {name = "Michael Pisman"}]
readme = "README.md"
requires-python = ">=3.11"
# keywords = ["one", "two"]
license = {text = "MIT"}
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'fastapi[all]',
    'uvicorn[all]',
    'fastapi-users[beanie]',
    'beanie',
]

[project.optional-dependencies]
testings = [
    'pytest',
    'pytest-cov',
    'faker',
    'flake8',
    'tox',
    'mypy',
]

[optional.package_data]
unipoll-api = [
    "py.typed",
]

[tool.setuptools_scm]
# version_scheme = "python-simplified-semver"


[tool.semantic_release]
version_source = "tag_only"
branch = "main"
major_on_zero = true
upload_to_pypi = false
# upload_to_repository = true
upload_to_release = true
commit_version_number = true
tag_commit = true

changelog_file = "CHANGELOG.md"
build_command = "python -m build ."
# commit_message = "chore(release): v{version} [skip ci]"

[tool.flake8]
max-line-length = 120

[tool.pytest.ini_options]
addopts = "--cov"
testpaths = ["tests"]
asyncio_mode="auto"
filterwarnings = [
    'ignore:cgi is deprecated:DeprecationWarning',
    "ignore:'crypt' is deprecated:DeprecationWarning",
    'ignore:pkg_resources is deprecated:DeprecationWarning',
    "ignore::pytest.PytestCollectionWarning"
]

[tool.mypy]
# mypy_path = "src"
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
no_implicit_reexport = true
plugins = [
  "pydantic.mypy"
]